# perf_aware_exercise

./: .gitignore
part2/: .ctags  CMakeLists.txt  Makefile
part2/src/: bench.h  haversine.c  json_parse.c  json_parse.h  main.c  random.c  random.h  stat.c  stat.h  types.h  utils.c  utils.h
